--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     display: flex;
     font: normal 18pt arial;
     color: aliceblue;
-    background-color: #8539b1;
+    background-color: black;
 }
 
 div#principal{
